Added liquid glass effect on create button * Create -> Write

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -54,7 +54,7 @@
     "sensitiveContent": "Sensible Inhalte",
     "updateYourNickname": "Ihren Spitznamen aktualisieren",
     "yourNickname": "Ihr Spitzname",
-    "create": "Erstellen",
+    "create": "Schreiben",
     "yourFolderName": "Ihr Ordnername",
     "noMindsInSelectedPeriod": "Keine Notizen im ausgewählten Zeitraum",
     "noMindsForPeriod": "Keine Notizen für diesen Zeitraum",
