--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -219,7 +219,7 @@
     "@yourNickname": {
         "description": "Nickname input hint"
     },
-    "create": "Create",
+    "create": "Write",
     "@create": {
         "description": "Create button"
     },
