--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -54,7 +54,7 @@
     "sensitiveContent": "機密コンテンツ",
     "updateYourNickname": "ニックネームを更新",
     "yourNickname": "あなたのニックネーム",
-    "create": "作成",
+    "create": "書く",
     "yourFolderName": "フォルダ名",
     "noMindsInSelectedPeriod": "選択した期間にメモがありません",
     "noMindsForPeriod": "この期間にメモがありません",
