--- a/lib/l10n/app_ky.arb
+++ b/lib/l10n/app_ky.arb
@@ -219,7 +219,7 @@
     "@yourNickname": {
         "description": "Никнэм киргизүү көрсөткүчү"
     },
-    "create": "Жаратуу",
+    "create": "Жазуу",
     "@create": {
         "description": "Жаратуу баскычы"
     },
