--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -11,7 +11,7 @@
     "edit": "Редактировать",
     "delete": "Удалить",
     "share": "Поделиться",
-    "switchDay": "Переключить день",
+    "switchDay": "Поменять день",
     "goToDate": "Перейти к дате",
     "showDigest": "Показать сводку для ...",
     "showAll": "Показать все",
@@ -54,7 +54,7 @@
     "sensitiveContent": "Конфиденциальный контент",
     "updateYourNickname": "Обновить ваш никнейм",
     "yourNickname": "Ваш никнейм",
-    "create": "Создать",
+    "create": "Написать",
     "yourFolderName": "Название вашей папки",
     "noMindsInSelectedPeriod": "Нет заметок в выбранном периоде",
     "noMindsForPeriod": "Нет заметок за этот период",
