--- a/lib/l10n/app_sr.arb
+++ b/lib/l10n/app_sr.arb
@@ -54,7 +54,7 @@
     "sensitiveContent": "Осетљиви садржај",
     "updateYourNickname": "Ажурирај свој надимак",
     "yourNickname": "Ваш надимак",
-    "create": "Креирај",
+    "create": "Напиши",
     "yourFolderName": "Име ваше фасцикле",
     "noMindsInSelectedPeriod": "Нема белешки у изабраном периоду",
     "noMindsForPeriod": "Нема белешки за овај период",
