--- a/lib/l10n/app_sr_Latn.arb
+++ b/lib/l10n/app_sr_Latn.arb
@@ -219,7 +219,7 @@
     "@yourNickname": {
         "description": "Savet za unos nadimka"
     },
-    "create": "Kreiraj",
+    "create": "Napiši",
     "@create": {
         "description": "Dugme kreiraj"
     },
