--- a/lib/l10n/app_uz.arb
+++ b/lib/l10n/app_uz.arb
@@ -219,7 +219,7 @@
     "@yourNickname": {
         "description": "Nikname kiritish ko'rsatkichi"
     },
-    "create": "Yaratish",
+    "create": "Yozish",
     "@create": {
         "description": "Yaratish tugmasi"
     },
