--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -54,7 +54,7 @@
     "sensitiveContent": "敏感内容",
     "updateYourNickname": "更新您的昵称",
     "yourNickname": "您的昵称",
-    "create": "创建",
+    "create": "写",
     "yourFolderName": "您的文件夹名称",
     "noMindsInSelectedPeriod": "所选期间内没有笔记",
     "noMindsForPeriod": "此期间没有笔记",
