--- a/lib/l10n/app_ky.arb
+++ b/lib/l10n/app_ky.arb
@@ -12,6 +12,8 @@
         "description": "Көрүнүш бөлүмүнүн аталышы"
     },
     "exportToCsv": "CSVга экспорттоо",
+    "exportData": "Маалыматтарды экспорттоо",
+    "importData": "Маалыматтарды импорттоо",
     "@exportToCsv": {
         "description": "CSVга экспорттоо баскычы"
     },
