Disabled debug menu

--- a/lib/l10n/app_sr_Latn.arb
+++ b/lib/l10n/app_sr_Latn.arb
@@ -352,5 +352,7 @@
             }
         }
     },
-    "week": "Nedelja"
+    "week": "Nedelja",
+    "exportData": "Izvoz podataka",
+    "importData": "Uvoz podataka"
 }
