Prepare to release

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -25,8 +25,11 @@
     "showDayDividers": "Tages-Trennlinien anzeigen",
     "tabsSettings": "Tab-Einstellungen",
     "whatsNew": "Was ist neu?",
+    "releaseNotes": "Versionshinweise",
     "suggestFeature": "Funktion vorschlagen",
     "sendFeedback": "Feedback senden",
+    "emailUs": "Schreib uns eine E-Mail",
+    "clearOfflineDataWarning": "Alle deine Offline-Daten werden gelöscht. Stelle sicher, dass du sie bereits exportiert hast.",
     "sourceCode": "Quellcode",
     "termsOfUse": "Nutzungsbedingungen",
     "privacyPolicy": "Datenschutzrichtlinie",
