--- a/lib/l10n/app_ky.arb
+++ b/lib/l10n/app_ky.arb
@@ -97,6 +97,10 @@
     "@whatsNew": {
         "description": "Жаңы нерселер навигациясы"
     },
+    "releaseNotes": "Релиз жазмалары",
+    "@releaseNotes": {
+        "description": "Релиз жазмалары навигациясы"
+    },
     "suggestFeature": "Өзгөчөлүктү сунуш кылуу",
     "@suggestFeature": {
         "description": "Өзгөчөлүктү сунуш кылуу навигациясы"
@@ -104,6 +108,14 @@
     "sendFeedback": "Пикир-божомол жөнөтүү",
     "@sendFeedback": {
         "description": "Пикир-божомол жөнөтүү навигациясы"
+    },
+    "emailUs": "Бизге email жазыңыз",
+    "@emailUs": {
+        "description": "Email аркылуу жазуу навигациясы"
+    },
+    "clearOfflineDataWarning": "Бардык оффлайн маалыматтарың өчүрүлөт. Аларды мурун экспорттогонуңа ынан.",
+    "@clearOfflineDataWarning": {
+        "description": "Оффлайн маалыматтарды өчүрүү эскертүүсү"
     },
     "sourceCode": "Булак коду",
     "@sourceCode": {
