--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -25,8 +25,11 @@
     "showDayDividers": "Показывать разделители дней",
     "tabsSettings": "Настройки вкладок",
     "whatsNew": "Что нового?",
+    "releaseNotes": "История версий",
     "suggestFeature": "Предложить функцию",
     "sendFeedback": "Отправить отзыв",
+    "emailUs": "Напишите нам на email",
+    "clearOfflineDataWarning": "Все ваши офлайн данные будут удалены. Убедитесь, что вы уже экспортировали их.",
     "sourceCode": "Исходный код",
     "termsOfUse": "Условия использования",
     "privacyPolicy": "Политика конфиденциальности",
