--- a/lib/l10n/app_sr.arb
+++ b/lib/l10n/app_sr.arb
@@ -25,8 +25,11 @@
     "showDayDividers": "Прикажи разделиоце дана",
     "tabsSettings": "Подешавања картица",
     "whatsNew": "Шта је ново?",
+    "releaseNotes": "Белешке о издању",
     "suggestFeature": "Предложи функцију",
     "sendFeedback": "Пошаљи повратну информацију",
+    "emailUs": "Пошаљи нам e-поруку",
+    "clearOfflineDataWarning": "Сви офлајн подаци ће бити обрисани. Увери се да си их већ извезао.",
     "sourceCode": "Изворни код",
     "termsOfUse": "Услови коришћења",
     "privacyPolicy": "Политика приватности",
