--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -25,8 +25,11 @@
     "showDayDividers": "日の区切りを表示",
     "tabsSettings": "タブ設定",
     "whatsNew": "新機能",
+    "releaseNotes": "リリースノート",
     "suggestFeature": "機能を提案",
     "sendFeedback": "フィードバックを送信",
+    "emailUs": "メールを送る",
+    "clearOfflineDataWarning": "オフラインデータはすべて削除されます。すでにエクスポート済みであることを確認してください。",
     "sourceCode": "ソースコード",
     "termsOfUse": "利用規約",
     "privacyPolicy": "プライバシーポリシー",
