--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -25,8 +25,11 @@
     "showDayDividers": "显示日期分隔符",
     "tabsSettings": "标签页设置",
     "whatsNew": "新功能",
+    "releaseNotes": "发行说明",
     "suggestFeature": "建议功能",
     "sendFeedback": "发送反馈",
+    "emailUs": "给我们发邮件",
+    "clearOfflineDataWarning": "所有离线数据都会被删除。请确保已提前导出。",
     "sourceCode": "源代码",
     "termsOfUse": "使用条款",
     "privacyPolicy": "隐私政策",
