Add export/import audio messages

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -91,5 +91,33 @@
     "debugMenuDescription": "Entwicklertools zum Umschalten experimenteller Funktionen",
     "noMindsForThisDay": "Keine Notizen für diesen Tag",
     "showMindsForPeriod": "Notizen für {period} anzeigen",
-    "week": "Woche"
+    "week": "Woche",
+    "password": "Passwort",
+    "enterPassword": "Passwort eingeben",
+    "confirmPassword": "Passwort bestätigen",
+    "reenterPassword": "Passwort erneut eingeben",
+    "passwordsDoNotMatch": "Passwörter stimmen nicht überein",
+    "exportPassword": "Export mit Passwort schützen?",
+    "exportPasswordDescription": "Fügen Sie ein Passwort hinzu, um Ihren Export zu verschlüsseln. Sie können dies überspringen für unverschlüsselten Export.",
+    "importPassword": "Passwort eingeben",
+    "importPasswordDescription": "Diese Datei ist passwortgeschützt. Bitte geben Sie das Passwort zum Entschlüsseln ein.",
+    "skipPassword": "Überspringen (kein Passwort)",
+    "continue_": "Weiter",
+    "incorrectPassword": "Falsches Passwort",
+    "incorrectPasswordMessage": "Das eingegebene Passwort ist falsch. Bitte versuchen Sie es erneut.",
+    "corruptedFile": "Beschädigte Datei",
+    "invalidFormat": "Ungültiges Format",
+    "missingAudioFiles": "Einige Audiodateien fehlen",
+    "insufficientStorage": "Unzureichender Speicher",
+    "unknownError": "Unbekannter Fehler",
+    "retry": "Wiederholen",
+    "ok": "OK",
+    "exportSuccess": "Export erfolgreich",
+    "exportError": "Export fehlgeschlagen",
+    "importSuccess": "Import erfolgreich",
+    "importError": "Import fehlgeschlagen",
+    "mindsExported": "Notizen exportiert",
+    "audioFilesExported": "Audiodateien exportiert",
+    "mindsImported": "Notizen importiert",
+    "audioFilesImported": "Audiodateien importiert"
 }
