--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -91,5 +91,33 @@
     "debugMenuDescription": "Инструменты разработчика для переключения экспериментальных функций",
     "noMindsForThisDay": "Нет заметок на этот день",
     "showMindsForPeriod": "Показать заметки за {period}",
-    "week": "Неделя"
+    "week": "Неделя",
+    "password": "Пароль",
+    "enterPassword": "Введите пароль",
+    "confirmPassword": "Подтвердите пароль",
+    "reenterPassword": "Введите пароль повторно",
+    "passwordsDoNotMatch": "Пароли не совпадают",
+    "exportPassword": "Защитить экспорт паролем?",
+    "exportPasswordDescription": "Добавьте пароль для шифрования экспорта. Вы можете пропустить это для незашифрованного экспорта.",
+    "importPassword": "Введите пароль",
+    "importPasswordDescription": "Этот файл защищен паролем. Пожалуйста, введите пароль для расшифровки.",
+    "skipPassword": "Пропустить (без пароля)",
+    "continue_": "Продолжить",
+    "incorrectPassword": "Неверный пароль",
+    "incorrectPasswordMessage": "Введенный вами пароль неверен. Пожалуйста, попробуйте снова.",
+    "corruptedFile": "Поврежденный файл",
+    "invalidFormat": "Неверный формат",
+    "missingAudioFiles": "Некоторые аудиофайлы отсутствуют",
+    "insufficientStorage": "Недостаточно места",
+    "unknownError": "Неизвестная ошибка",
+    "retry": "Повторить",
+    "ok": "OK",
+    "exportSuccess": "Экспорт успешен",
+    "exportError": "Ошибка экспорта",
+    "importSuccess": "Импорт успешен",
+    "importError": "Ошибка импорта",
+    "mindsExported": "Заметок экспортировано",
+    "audioFilesExported": "Аудиофайлов экспортировано",
+    "mindsImported": "Заметок импортировано",
+    "audioFilesImported": "Аудиофайлов импортировано"
 }
