--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -91,5 +91,33 @@
     "debugMenuDescription": "用于切换实验功能的开发工具",
     "noMindsForThisDay": "今天没有笔记",
     "showMindsForPeriod": "显示{period}的笔记",
-    "week": "周"
+    "week": "周",
+    "password": "Password",
+    "enterPassword": "Enter password",
+    "confirmPassword": "Confirm password",
+    "reenterPassword": "Re-enter password",
+    "passwordsDoNotMatch": "Passwords do not match",
+    "exportPassword": "Password protect export?",
+    "exportPasswordDescription": "Add a password to encrypt your export. You can skip this for unencrypted export.",
+    "importPassword": "Enter password",
+    "importPasswordDescription": "This file is password-protected. Please enter the password to decrypt.",
+    "skipPassword": "Skip (no password)",
+    "continue_": "Continue",
+    "incorrectPassword": "Incorrect password",
+    "incorrectPasswordMessage": "The password you entered is incorrect. Please try again.",
+    "corruptedFile": "Corrupted file",
+    "invalidFormat": "Invalid format",
+    "missingAudioFiles": "Some audio files are missing",
+    "insufficientStorage": "Insufficient storage",
+    "unknownError": "Unknown error",
+    "retry": "Retry",
+    "ok": "OK",
+    "exportSuccess": "Export successful",
+    "exportError": "Export failed",
+    "importSuccess": "Import successful",
+    "importError": "Import failed",
+    "mindsExported": "Minds exported",
+    "audioFilesExported": "Audio files exported",
+    "mindsImported": "Minds imported",
+    "audioFilesImported": "Audio files imported"
 }
