--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -13,6 +13,7 @@
     "edit": "Редактировать",
     "delete": "Удалить",
     "share": "Поделиться",
+    "saveToFiles": "Сохранить в файлы",
     "switchDay": "Поменять день",
     "goToDate": "Перейти к дате",
     "showDigest": "Показать сводку для ...",
@@ -93,11 +94,12 @@
     "showMindsForPeriod": "Показать заметки за {period}",
     "week": "Неделя",
     "password": "Пароль",
+    "archivePassword": "Пароль для архива",
     "enterPassword": "Введите пароль",
     "confirmPassword": "Подтвердите пароль",
     "reenterPassword": "Введите пароль повторно",
     "passwordsDoNotMatch": "Пароли не совпадают",
-    "exportPassword": "Защитить экспорт паролем?",
+    "exportPassword": "Экспорт в ZIP",
     "exportPasswordDescription": "Добавьте пароль для шифрования экспорта. Вы можете пропустить это для незашифрованного экспорта.",
     "importPassword": "Введите пароль",
     "importPasswordDescription": "Этот файл защищен паролем. Пожалуйста, введите пароль для расшифровки.",
@@ -116,6 +118,8 @@
     "exportError": "Ошибка экспорта",
     "importSuccess": "Импорт успешен",
     "importError": "Ошибка импорта",
+    "mindsToExport": "Заметок",
+    "audioFilesToExport": "Аудиофайлов",
     "mindsExported": "Заметок экспортировано",
     "audioFilesExported": "Аудиофайлов экспортировано",
     "mindsImported": "Заметок импортировано",
