Translation * Hide membership for android

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -13,6 +13,7 @@
     "edit": "Bearbeiten",
     "delete": "Löschen",
     "share": "Teilen",
+    "saveToFiles": "In Dateien speichern",
     "switchDay": "Tag wechseln",
     "goToDate": "Zu Datum gehen",
     "showDigest": "Zusammenfassung anzeigen für ...",
@@ -93,6 +94,7 @@
     "showMindsForPeriod": "Notizen für {period} anzeigen",
     "week": "Woche",
     "password": "Passwort",
+    "archivePassword": "Archiv-Passwort",
     "enterPassword": "Passwort eingeben",
     "confirmPassword": "Passwort bestätigen",
     "reenterPassword": "Passwort erneut eingeben",
@@ -116,6 +118,8 @@
     "exportError": "Export fehlgeschlagen",
     "importSuccess": "Import erfolgreich",
     "importError": "Import fehlgeschlagen",
+    "mindsToExport": "Notizen",
+    "audioFilesToExport": "Audiodateien",
     "mindsExported": "Notizen exportiert",
     "audioFilesExported": "Audiodateien exportiert",
     "mindsImported": "Notizen importiert",
