--- a/lib/l10n/app_sr_Latn.arb
+++ b/lib/l10n/app_sr_Latn.arb
@@ -47,6 +47,7 @@
     "@share": {
         "description": "Akcija deljenja"
     },
+    "saveToFiles": "Sačuvaj u fajlove",
     "switchDay": "Promeni dan",
     "@switchDay": {
         "description": "Akcija promene dana"
@@ -365,34 +366,37 @@
         }
     },
     "week": "Nedelja",
+    "password": "Lozinka",
+    "archivePassword": "Lozinka arhive",
     "exportData": "Izvoz podataka",
     "importData": "Uvoz podataka",
-    "password": "Password",
-    "enterPassword": "Enter password",
-    "confirmPassword": "Confirm password",
-    "reenterPassword": "Re-enter password",
-    "passwordsDoNotMatch": "Passwords do not match",
-    "exportPassword": "Password protect export?",
-    "exportPasswordDescription": "Add a password to encrypt your export. You can skip this for unencrypted export.",
-    "importPassword": "Enter password",
-    "importPasswordDescription": "This file is password-protected. Please enter the password to decrypt.",
-    "skipPassword": "Skip (no password)",
-    "continue_": "Continue",
-    "incorrectPassword": "Incorrect password",
-    "incorrectPasswordMessage": "The password you entered is incorrect. Please try again.",
-    "corruptedFile": "Corrupted file",
-    "invalidFormat": "Invalid format",
-    "missingAudioFiles": "Some audio files are missing",
-    "insufficientStorage": "Insufficient storage",
-    "unknownError": "Unknown error",
-    "retry": "Retry",
+    "enterPassword": "Unesi lozinku",
+    "confirmPassword": "Potvrdi lozinku",
+    "reenterPassword": "Ponovo unesi lozinku",
+    "passwordsDoNotMatch": "Lozinke se ne podudaraju",
+    "exportPassword": "Zaštititi izvoz lozinkom?",
+    "exportPasswordDescription": "Dodaj lozinku da šifruješ izvoz. Možeš preskočiti za nešifrovani izvoz.",
+    "importPassword": "Unesi lozinku",
+    "importPasswordDescription": "Ovaj fajl je zaštićen lozinkom. Unesi lozinku da dešifruješ.",
+    "skipPassword": "Preskoči (bez lozinke)",
+    "continue_": "Nastavi",
+    "incorrectPassword": "Netačna lozinka",
+    "incorrectPasswordMessage": "Lozinka koju si uneo je netačna. Pokušaj ponovo.",
+    "corruptedFile": "Oštećeni fajl",
+    "invalidFormat": "Nevažeći format",
+    "missingAudioFiles": "Neki audio fajlovi nedostaju",
+    "insufficientStorage": "Nedovoljno memorije",
+    "unknownError": "Nepoznata greška",
+    "retry": "Pokušaj ponovo",
     "ok": "OK",
-    "exportSuccess": "Export successful",
-    "exportError": "Export failed",
-    "importSuccess": "Import successful",
-    "importError": "Import failed",
-    "mindsExported": "Minds exported",
-    "audioFilesExported": "Audio files exported",
-    "mindsImported": "Minds imported",
-    "audioFilesImported": "Audio files imported"
+    "exportSuccess": "Izvoz uspešan",
+    "exportError": "Izvoz neuspešan",
+    "importSuccess": "Uvoz uspešan",
+    "importError": "Uvoz neuspešan",
+    "mindsToExport": "Umovi",
+    "audioFilesToExport": "Audio fajlovi",
+    "mindsExported": "Umovi izvezeni",
+    "audioFilesExported": "Audio fajlovi izvezeni",
+    "mindsImported": "Umovi uvezeni",
+    "audioFilesImported": "Audio fajlovi uvezeni"
 }
