--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -13,6 +13,7 @@
     "edit": "编辑",
     "delete": "删除",
     "share": "分享",
+    "saveToFiles": "保存到文件",
     "switchDay": "切换日期",
     "goToDate": "转到日期",
     "showDigest": "显示摘要...",
@@ -92,32 +93,35 @@
     "noMindsForThisDay": "今天没有笔记",
     "showMindsForPeriod": "显示{period}的笔记",
     "week": "周",
-    "password": "Password",
-    "enterPassword": "Enter password",
-    "confirmPassword": "Confirm password",
-    "reenterPassword": "Re-enter password",
-    "passwordsDoNotMatch": "Passwords do not match",
-    "exportPassword": "Password protect export?",
-    "exportPasswordDescription": "Add a password to encrypt your export. You can skip this for unencrypted export.",
-    "importPassword": "Enter password",
-    "importPasswordDescription": "This file is password-protected. Please enter the password to decrypt.",
-    "skipPassword": "Skip (no password)",
-    "continue_": "Continue",
-    "incorrectPassword": "Incorrect password",
-    "incorrectPasswordMessage": "The password you entered is incorrect. Please try again.",
-    "corruptedFile": "Corrupted file",
-    "invalidFormat": "Invalid format",
-    "missingAudioFiles": "Some audio files are missing",
-    "insufficientStorage": "Insufficient storage",
-    "unknownError": "Unknown error",
-    "retry": "Retry",
-    "ok": "OK",
-    "exportSuccess": "Export successful",
-    "exportError": "Export failed",
-    "importSuccess": "Import successful",
-    "importError": "Import failed",
-    "mindsExported": "Minds exported",
-    "audioFilesExported": "Audio files exported",
-    "mindsImported": "Minds imported",
-    "audioFilesImported": "Audio files imported"
+    "password": "密码",
+    "archivePassword": "存档密码",
+    "enterPassword": "输入密码",
+    "confirmPassword": "确认密码",
+    "reenterPassword": "重新输入密码",
+    "passwordsDoNotMatch": "密码不匹配",
+    "exportPassword": "是否为导出设置密码保护？",
+    "exportPasswordDescription": "添加密码以加密您的导出。您可以跳过此步骤以进行未加密的导出。",
+    "importPassword": "输入密码",
+    "importPasswordDescription": "此文件已加密保护。请输入密码以解密。",
+    "skipPassword": "跳过（无密码）",
+    "continue_": "继续",
+    "incorrectPassword": "密码错误",
+    "incorrectPasswordMessage": "您输入的密码不正确。请重试。",
+    "corruptedFile": "文件已损坏",
+    "invalidFormat": "格式无效",
+    "missingAudioFiles": "部分音频文件丢失",
+    "insufficientStorage": "存储空间不足",
+    "unknownError": "未知错误",
+    "retry": "重试",
+    "ok": "确定",
+    "exportSuccess": "导出成功",
+    "exportError": "导出失败",
+    "importSuccess": "导入成功",
+    "importError": "导入失败",
+    "mindsToExport": "思绪",
+    "audioFilesToExport": "音频文件",
+    "mindsExported": "思绪已导出",
+    "audioFilesExported": "音频文件已导出",
+    "mindsImported": "思绪已导入",
+    "audioFilesImported": "音频文件已导入"
 }
