--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -49,6 +49,7 @@
     "@share": {
         "description": "Acción compartir"
     },
+    "saveToFiles": "Guardar en archivos",
     "switchDay": "Cambiar día",
     "@switchDay": {
         "description": "Acción cambiar día"
@@ -367,32 +368,35 @@
         }
     },
     "week": "Semana",
-    "password": "Password",
-    "enterPassword": "Enter password",
-    "confirmPassword": "Confirm password",
-    "reenterPassword": "Re-enter password",
-    "passwordsDoNotMatch": "Passwords do not match",
-    "exportPassword": "Password protect export?",
-    "exportPasswordDescription": "Add a password to encrypt your export. You can skip this for unencrypted export.",
-    "importPassword": "Enter password",
-    "importPasswordDescription": "This file is password-protected. Please enter the password to decrypt.",
-    "skipPassword": "Skip (no password)",
-    "continue_": "Continue",
-    "incorrectPassword": "Incorrect password",
-    "incorrectPasswordMessage": "The password you entered is incorrect. Please try again.",
-    "corruptedFile": "Corrupted file",
-    "invalidFormat": "Invalid format",
-    "missingAudioFiles": "Some audio files are missing",
-    "insufficientStorage": "Insufficient storage",
-    "unknownError": "Unknown error",
-    "retry": "Retry",
+    "password": "Contraseña",
+    "archivePassword": "Contraseña del archivo",
+    "enterPassword": "Introducir contraseña",
+    "confirmPassword": "Confirmar contraseña",
+    "reenterPassword": "Volver a introducir contraseña",
+    "passwordsDoNotMatch": "Las contraseñas no coinciden",
+    "exportPassword": "¿Proteger exportación con contraseña?",
+    "exportPasswordDescription": "Agrega una contraseña para cifrar tu exportación. Puedes omitir esto para exportación sin cifrar.",
+    "importPassword": "Introducir contraseña",
+    "importPasswordDescription": "Este archivo está protegido con contraseña. Por favor introduce la contraseña para descifrar.",
+    "skipPassword": "Omitir (sin contraseña)",
+    "continue_": "Continuar",
+    "incorrectPassword": "Contraseña incorrecta",
+    "incorrectPasswordMessage": "La contraseña que introdujiste es incorrecta. Por favor intenta de nuevo.",
+    "corruptedFile": "Archivo dañado",
+    "invalidFormat": "Formato inválido",
+    "missingAudioFiles": "Faltan algunos archivos de audio",
+    "insufficientStorage": "Almacenamiento insuficiente",
+    "unknownError": "Error desconocido",
+    "retry": "Reintentar",
     "ok": "OK",
-    "exportSuccess": "Export successful",
-    "exportError": "Export failed",
-    "importSuccess": "Import successful",
-    "importError": "Import failed",
-    "mindsExported": "Minds exported",
-    "audioFilesExported": "Audio files exported",
-    "mindsImported": "Minds imported",
-    "audioFilesImported": "Audio files imported"
+    "exportSuccess": "Exportación exitosa",
+    "exportError": "Exportación fallida",
+    "importSuccess": "Importación exitosa",
+    "importError": "Importación fallida",
+    "mindsToExport": "Mentes",
+    "audioFilesToExport": "Archivos de audio",
+    "mindsExported": "Mentes exportadas",
+    "audioFilesExported": "Archivos de audio exportados",
+    "mindsImported": "Mentes importadas",
+    "audioFilesImported": "Archivos de audio importados"
 }
