--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -49,6 +49,7 @@
     "@share": {
         "description": "Azione condividi"
     },
+    "saveToFiles": "Salva in file",
     "switchDay": "Cambia giorno",
     "@switchDay": {
         "description": "Azione cambia giorno"
@@ -368,31 +369,34 @@
     },
     "week": "Settimana",
     "password": "Password",
-    "enterPassword": "Enter password",
-    "confirmPassword": "Confirm password",
-    "reenterPassword": "Re-enter password",
-    "passwordsDoNotMatch": "Passwords do not match",
-    "exportPassword": "Password protect export?",
-    "exportPasswordDescription": "Add a password to encrypt your export. You can skip this for unencrypted export.",
-    "importPassword": "Enter password",
-    "importPasswordDescription": "This file is password-protected. Please enter the password to decrypt.",
-    "skipPassword": "Skip (no password)",
-    "continue_": "Continue",
-    "incorrectPassword": "Incorrect password",
-    "incorrectPasswordMessage": "The password you entered is incorrect. Please try again.",
-    "corruptedFile": "Corrupted file",
-    "invalidFormat": "Invalid format",
-    "missingAudioFiles": "Some audio files are missing",
-    "insufficientStorage": "Insufficient storage",
-    "unknownError": "Unknown error",
-    "retry": "Retry",
+    "archivePassword": "Password archivio",
+    "enterPassword": "Inserisci password",
+    "confirmPassword": "Conferma password",
+    "reenterPassword": "Reinserisci password",
+    "passwordsDoNotMatch": "Le password non corrispondono",
+    "exportPassword": "Proteggere esportazione con password?",
+    "exportPasswordDescription": "Aggiungi una password per crittografare la tua esportazione. Puoi saltare questo per esportazione non crittografata.",
+    "importPassword": "Inserisci password",
+    "importPasswordDescription": "Questo file è protetto da password. Per favore inserisci la password per decifrare.",
+    "skipPassword": "Salta (senza password)",
+    "continue_": "Continua",
+    "incorrectPassword": "Password errata",
+    "incorrectPasswordMessage": "La password inserita è errata. Per favore riprova.",
+    "corruptedFile": "File danneggiato",
+    "invalidFormat": "Formato non valido",
+    "missingAudioFiles": "Alcuni file audio mancano",
+    "insufficientStorage": "Spazio di archiviazione insufficiente",
+    "unknownError": "Errore sconosciuto",
+    "retry": "Riprova",
     "ok": "OK",
-    "exportSuccess": "Export successful",
-    "exportError": "Export failed",
-    "importSuccess": "Import successful",
-    "importError": "Import failed",
-    "mindsExported": "Minds exported",
-    "audioFilesExported": "Audio files exported",
-    "mindsImported": "Minds imported",
-    "audioFilesImported": "Audio files imported"
+    "exportSuccess": "Esportazione riuscita",
+    "exportError": "Esportazione fallita",
+    "importSuccess": "Importazione riuscita",
+    "importError": "Importazione fallita",
+    "mindsToExport": "Mind",
+    "audioFilesToExport": "File audio",
+    "mindsExported": "Mind esportate",
+    "audioFilesExported": "File audio esportati",
+    "mindsImported": "Mind importate",
+    "audioFilesImported": "File audio importati"
 }
