--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -13,6 +13,7 @@
     "edit": "編集",
     "delete": "削除",
     "share": "共有",
+    "saveToFiles": "ファイルに保存",
     "switchDay": "日を切り替え",
     "goToDate": "日付に移動",
     "showDigest": "...の要約を表示",
@@ -92,32 +93,35 @@
     "noMindsForThisDay": "この日のメモはありません",
     "showMindsForPeriod": "{period}のメモを表示",
     "week": "週",
-    "password": "Password",
-    "enterPassword": "Enter password",
-    "confirmPassword": "Confirm password",
-    "reenterPassword": "Re-enter password",
-    "passwordsDoNotMatch": "Passwords do not match",
-    "exportPassword": "Password protect export?",
-    "exportPasswordDescription": "Add a password to encrypt your export. You can skip this for unencrypted export.",
-    "importPassword": "Enter password",
-    "importPasswordDescription": "This file is password-protected. Please enter the password to decrypt.",
-    "skipPassword": "Skip (no password)",
-    "continue_": "Continue",
-    "incorrectPassword": "Incorrect password",
-    "incorrectPasswordMessage": "The password you entered is incorrect. Please try again.",
-    "corruptedFile": "Corrupted file",
-    "invalidFormat": "Invalid format",
-    "missingAudioFiles": "Some audio files are missing",
-    "insufficientStorage": "Insufficient storage",
-    "unknownError": "Unknown error",
-    "retry": "Retry",
+    "password": "パスワード",
+    "archivePassword": "アーカイブパスワード",
+    "enterPassword": "パスワードを入力",
+    "confirmPassword": "パスワードを確認",
+    "reenterPassword": "パスワードを再入力",
+    "passwordsDoNotMatch": "パスワードが一致しません",
+    "exportPassword": "エクスポートをパスワードで保護しますか？",
+    "exportPasswordDescription": "エクスポートを暗号化するためにパスワードを追加します。暗号化しない場合はスキップできます。",
+    "importPassword": "パスワードを入力",
+    "importPasswordDescription": "このファイルはパスワードで保護されています。復号化するためにパスワードを入力してください。",
+    "skipPassword": "スキップ（パスワードなし）",
+    "continue_": "続ける",
+    "incorrectPassword": "パスワードが正しくありません",
+    "incorrectPasswordMessage": "入力されたパスワードが正しくありません。もう一度お試しください。",
+    "corruptedFile": "破損したファイル",
+    "invalidFormat": "無効な形式",
+    "missingAudioFiles": "一部の音声ファイルが見つかりません",
+    "insufficientStorage": "ストレージ容量が不足しています",
+    "unknownError": "不明なエラー",
+    "retry": "再試行",
     "ok": "OK",
-    "exportSuccess": "Export successful",
-    "exportError": "Export failed",
-    "importSuccess": "Import successful",
-    "importError": "Import failed",
-    "mindsExported": "Minds exported",
-    "audioFilesExported": "Audio files exported",
-    "mindsImported": "Minds imported",
-    "audioFilesImported": "Audio files imported"
+    "exportSuccess": "エクスポート成功",
+    "exportError": "エクスポート失敗",
+    "importSuccess": "インポート成功",
+    "importError": "インポート失敗",
+    "mindsToExport": "マインド",
+    "audioFilesToExport": "音声ファイル",
+    "mindsExported": "マインドをエクスポートしました",
+    "audioFilesExported": "音声ファイルをエクスポートしました",
+    "mindsImported": "マインドをインポートしました",
+    "audioFilesImported": "音声ファイルをインポートしました"
 }
