--- a/lib/l10n/app_kk.arb
+++ b/lib/l10n/app_kk.arb
@@ -49,6 +49,7 @@
     "@share": {
         "description": "Бөлісу әрекеті"
     },
+    "saveToFiles": "Файлдарға сақтау",
     "switchDay": "Күнді ауыстыру",
     "@switchDay": {
         "description": "Күнді ауыстыру әрекеті"
@@ -367,32 +368,35 @@
         }
     },
     "week": "Апта",
-    "password": "Password",
-    "enterPassword": "Enter password",
-    "confirmPassword": "Confirm password",
-    "reenterPassword": "Re-enter password",
-    "passwordsDoNotMatch": "Passwords do not match",
-    "exportPassword": "Password protect export?",
-    "exportPasswordDescription": "Add a password to encrypt your export. You can skip this for unencrypted export.",
-    "importPassword": "Enter password",
-    "importPasswordDescription": "This file is password-protected. Please enter the password to decrypt.",
-    "skipPassword": "Skip (no password)",
-    "continue_": "Continue",
-    "incorrectPassword": "Incorrect password",
-    "incorrectPasswordMessage": "The password you entered is incorrect. Please try again.",
-    "corruptedFile": "Corrupted file",
-    "invalidFormat": "Invalid format",
-    "missingAudioFiles": "Some audio files are missing",
-    "insufficientStorage": "Insufficient storage",
-    "unknownError": "Unknown error",
-    "retry": "Retry",
+    "password": "Құпия сөз",
+    "archivePassword": "Мұрағат құпия сөзі",
+    "enterPassword": "Құпия сөзді енгізіңіз",
+    "confirmPassword": "Құпия сөзді растаңыз",
+    "reenterPassword": "Құпия сөзді қайта енгізіңіз",
+    "passwordsDoNotMatch": "Құпия сөздер сәйкес келмейді",
+    "exportPassword": "Экспортты құпия сөзбен қорғау керек пе?",
+    "exportPasswordDescription": "Экспортыңызды шифрлау үшін құпия сөз қосыңыз. Шифрланбаған экспорт үшін мұны өткізіп жіберуге болады.",
+    "importPassword": "Құпия сөзді енгізіңіз",
+    "importPasswordDescription": "Бұл файл құпия сөзбен қорғалған. Шифрды ашу үшін құпия сөзді енгізіңіз.",
+    "skipPassword": "Өткізіп жіберу (құпия сөз жоқ)",
+    "continue_": "Жалғастыру",
+    "incorrectPassword": "Құпия сөз қате",
+    "incorrectPasswordMessage": "Сіз енгізген құпия сөз қате. Қайтадан көріңіз.",
+    "corruptedFile": "Зақымдалған файл",
+    "invalidFormat": "Жарамсыз пішім",
+    "missingAudioFiles": "Кейбір аудио файлдар жоқ",
+    "insufficientStorage": "Жеткіліксіз қоймалық орын",
+    "unknownError": "Белгісіз қате",
+    "retry": "Қайтадан көру",
     "ok": "OK",
-    "exportSuccess": "Export successful",
-    "exportError": "Export failed",
-    "importSuccess": "Import successful",
-    "importError": "Import failed",
-    "mindsExported": "Minds exported",
-    "audioFilesExported": "Audio files exported",
-    "mindsImported": "Minds imported",
-    "audioFilesImported": "Audio files imported"
+    "exportSuccess": "Экспорт сәтті",
+    "exportError": "Экспорт сәтсіз",
+    "importSuccess": "Импорт сәтті",
+    "importError": "Импорт сәтсіз",
+    "mindsToExport": "Ойлар",
+    "audioFilesToExport": "Аудио файлдар",
+    "mindsExported": "Ойлар экспортталды",
+    "audioFilesExported": "Аудио файлдар экспортталды",
+    "mindsImported": "Ойлар импортталды",
+    "audioFilesImported": "Аудио файлдар импортталды"
 }
