--- a/lib/l10n/app_ky.arb
+++ b/lib/l10n/app_ky.arb
@@ -49,6 +49,7 @@
     "@share": {
         "description": "Бөлүшүү аракети"
     },
+    "saveToFiles": "Файлдарга сактоо",
     "switchDay": "Күндү алмаштыруу",
     "@switchDay": {
         "description": "Күндү алмаштыруу аракети"
@@ -367,32 +368,35 @@
         }
     },
     "week": "Жума",
-    "password": "Password",
-    "enterPassword": "Enter password",
-    "confirmPassword": "Confirm password",
-    "reenterPassword": "Re-enter password",
-    "passwordsDoNotMatch": "Passwords do not match",
-    "exportPassword": "Password protect export?",
-    "exportPasswordDescription": "Add a password to encrypt your export. You can skip this for unencrypted export.",
-    "importPassword": "Enter password",
-    "importPasswordDescription": "This file is password-protected. Please enter the password to decrypt.",
-    "skipPassword": "Skip (no password)",
-    "continue_": "Continue",
-    "incorrectPassword": "Incorrect password",
-    "incorrectPasswordMessage": "The password you entered is incorrect. Please try again.",
-    "corruptedFile": "Corrupted file",
-    "invalidFormat": "Invalid format",
-    "missingAudioFiles": "Some audio files are missing",
-    "insufficientStorage": "Insufficient storage",
-    "unknownError": "Unknown error",
-    "retry": "Retry",
+    "password": "Сырсөз",
+    "archivePassword": "Архив сырсөзү",
+    "enterPassword": "Сырсөздү киргизиңиз",
+    "confirmPassword": "Сырсөздү ырастаңыз",
+    "reenterPassword": "Сырсөздү кайра киргизиңиз",
+    "passwordsDoNotMatch": "Сырсөздөр дал келбейт",
+    "exportPassword": "Экспортту сырсөз менен коргоого алуу керекпи?",
+    "exportPasswordDescription": "Экспортуңузду шифрлөө үчүн сырсөз кошуңуз. Шифрлөөсүз экспорт үчүн бул өткөрүп жиберсе болот.",
+    "importPassword": "Сырсөздү киргизиңиз",
+    "importPasswordDescription": "Бул файл сырсөз менен корголгон. Шифрди ачуу үчүн сырсөздү киргизиңиз.",
+    "skipPassword": "Өткөрүп жиберүү (сырсөзсүз)",
+    "continue_": "Улантуу",
+    "incorrectPassword": "Сырсөз туура эмес",
+    "incorrectPasswordMessage": "Сиз киргизген сырсөз туура эмес. Кайра аракет кылыңыз.",
+    "corruptedFile": "Бузулган файл",
+    "invalidFormat": "Жараксыз формат",
+    "missingAudioFiles": "Кээ бир аудио файлдар жок",
+    "insufficientStorage": "Жетишсиз сактоо орду",
+    "unknownError": "Белгисиз ката",
+    "retry": "Кайра аракет кылуу",
     "ok": "OK",
-    "exportSuccess": "Export successful",
-    "exportError": "Export failed",
-    "importSuccess": "Import successful",
-    "importError": "Import failed",
-    "mindsExported": "Minds exported",
-    "audioFilesExported": "Audio files exported",
-    "mindsImported": "Minds imported",
-    "audioFilesImported": "Audio files imported"
+    "exportSuccess": "Экспорт ийгиликтүү",
+    "exportError": "Экспорт ийгиликсиз",
+    "importSuccess": "Импорт ийгиликтүү",
+    "importError": "Импорт ийгиликсиз",
+    "mindsToExport": "Ойлор",
+    "audioFilesToExport": "Аудио файлдар",
+    "mindsExported": "Ойлор экспортталды",
+    "audioFilesExported": "Аудио файлдар экспортталды",
+    "mindsImported": "Ойлор импортталды",
+    "audioFilesImported": "Аудио файлдар импортталды"
 }
