--- a/lib/l10n/app_sr.arb
+++ b/lib/l10n/app_sr.arb
@@ -13,6 +13,7 @@
     "edit": "Уреди",
     "delete": "Обриши",
     "share": "Подели",
+    "saveToFiles": "Сачувај у фајлове",
     "switchDay": "Промени дан",
     "goToDate": "Иди на датум",
     "showDigest": "Прикажи сажетак за ...",
@@ -92,32 +93,35 @@
     "noMindsForThisDay": "Нема белешки за овај дан",
     "showMindsForPeriod": "Прикажи белешке за {period}",
     "week": "Недеља",
-    "password": "Password",
-    "enterPassword": "Enter password",
-    "confirmPassword": "Confirm password",
-    "reenterPassword": "Re-enter password",
-    "passwordsDoNotMatch": "Passwords do not match",
-    "exportPassword": "Password protect export?",
-    "exportPasswordDescription": "Add a password to encrypt your export. You can skip this for unencrypted export.",
-    "importPassword": "Enter password",
-    "importPasswordDescription": "This file is password-protected. Please enter the password to decrypt.",
-    "skipPassword": "Skip (no password)",
-    "continue_": "Continue",
-    "incorrectPassword": "Incorrect password",
-    "incorrectPasswordMessage": "The password you entered is incorrect. Please try again.",
-    "corruptedFile": "Corrupted file",
-    "invalidFormat": "Invalid format",
-    "missingAudioFiles": "Some audio files are missing",
-    "insufficientStorage": "Insufficient storage",
-    "unknownError": "Unknown error",
-    "retry": "Retry",
+    "password": "Лозинка",
+    "archivePassword": "Лозинка архиве",
+    "enterPassword": "Унеси лозинку",
+    "confirmPassword": "Потврди лозинку",
+    "reenterPassword": "Поново унеси лозинку",
+    "passwordsDoNotMatch": "Лозинке се не подударају",
+    "exportPassword": "Заштитити извоз лозинком?",
+    "exportPasswordDescription": "Додај лозинку да шифрујеш извоз. Можеш прескочити за нешифровани извоз.",
+    "importPassword": "Унеси лозинку",
+    "importPasswordDescription": "Овај фајл је заштићен лозинком. Унеси лозинку да дешифрујеш.",
+    "skipPassword": "Прескочи (без лозинке)",
+    "continue_": "Настави",
+    "incorrectPassword": "Нетачна лозинка",
+    "incorrectPasswordMessage": "Лозинка коју си унео је нетачна. Покушај поново.",
+    "corruptedFile": "Оштећени фајл",
+    "invalidFormat": "Неважећи формат",
+    "missingAudioFiles": "Неки аудио фајлови недостају",
+    "insufficientStorage": "Недовољно меморије",
+    "unknownError": "Непозната грешка",
+    "retry": "Покушај поново",
     "ok": "OK",
-    "exportSuccess": "Export successful",
-    "exportError": "Export failed",
-    "importSuccess": "Import successful",
-    "importError": "Import failed",
-    "mindsExported": "Minds exported",
-    "audioFilesExported": "Audio files exported",
-    "mindsImported": "Minds imported",
-    "audioFilesImported": "Audio files imported"
+    "exportSuccess": "Извоз успешан",
+    "exportError": "Извоз неуспешан",
+    "importSuccess": "Увоз успешан",
+    "importError": "Увоз неуспешан",
+    "mindsToExport": "Умови",
+    "audioFilesToExport": "Аудио фајлови",
+    "mindsExported": "Умови извезени",
+    "audioFilesExported": "Аудио фајлови извезени",
+    "mindsImported": "Умови увезени",
+    "audioFilesImported": "Аудио фајлови увезени"
 }
