--- a/lib/l10n/app_uz.arb
+++ b/lib/l10n/app_uz.arb
@@ -49,6 +49,7 @@
     "@share": {
         "description": "Ulashish harakati"
     },
+    "saveToFiles": "Fayllarga saqlash",
     "switchDay": "Kunni almashtirish",
     "@switchDay": {
         "description": "Kunni almashtirish harakati"
@@ -367,32 +368,35 @@
         }
     },
     "week": "Hafta",
-    "password": "Password",
-    "enterPassword": "Enter password",
-    "confirmPassword": "Confirm password",
-    "reenterPassword": "Re-enter password",
-    "passwordsDoNotMatch": "Passwords do not match",
-    "exportPassword": "Password protect export?",
-    "exportPasswordDescription": "Add a password to encrypt your export. You can skip this for unencrypted export.",
-    "importPassword": "Enter password",
-    "importPasswordDescription": "This file is password-protected. Please enter the password to decrypt.",
-    "skipPassword": "Skip (no password)",
-    "continue_": "Continue",
-    "incorrectPassword": "Incorrect password",
-    "incorrectPasswordMessage": "The password you entered is incorrect. Please try again.",
-    "corruptedFile": "Corrupted file",
-    "invalidFormat": "Invalid format",
-    "missingAudioFiles": "Some audio files are missing",
-    "insufficientStorage": "Insufficient storage",
-    "unknownError": "Unknown error",
-    "retry": "Retry",
+    "password": "Parol",
+    "archivePassword": "Arxiv paroli",
+    "enterPassword": "Parolni kiriting",
+    "confirmPassword": "Parolni tasdiqlang",
+    "reenterPassword": "Parolni qayta kiriting",
+    "passwordsDoNotMatch": "Parollar mos kelmaydi",
+    "exportPassword": "Eksportni parol bilan himoyalaysizmi?",
+    "exportPasswordDescription": "Eksportingizni shifrlash uchun parol qo'shing. Shifrlanmagan eksport uchun buni o'tkazib yuborishingiz mumkin.",
+    "importPassword": "Parolni kiriting",
+    "importPasswordDescription": "Bu fayl parol bilan himoyalangan. Shifrni ochish uchun parolni kiriting.",
+    "skipPassword": "O'tkazib yuborish (parolsiz)",
+    "continue_": "Davom etish",
+    "incorrectPassword": "Noto'g'ri parol",
+    "incorrectPasswordMessage": "Siz kiritgan parol noto'g'ri. Iltimos, qayta urinib ko'ring.",
+    "corruptedFile": "Buzilgan fayl",
+    "invalidFormat": "Yaroqsiz format",
+    "missingAudioFiles": "Ba'zi audio fayllar yo'q",
+    "insufficientStorage": "Yetarli saqlash joyi yo'q",
+    "unknownError": "Noma'lum xato",
+    "retry": "Qayta urinish",
     "ok": "OK",
-    "exportSuccess": "Export successful",
-    "exportError": "Export failed",
-    "importSuccess": "Import successful",
-    "importError": "Import failed",
-    "mindsExported": "Minds exported",
-    "audioFilesExported": "Audio files exported",
-    "mindsImported": "Minds imported",
-    "audioFilesImported": "Audio files imported"
+    "exportSuccess": "Eksport muvaffaqiyatli",
+    "exportError": "Eksport muvaffaqiyatsiz",
+    "importSuccess": "Import muvaffaqiyatli",
+    "importError": "Import muvaffaqiyatsiz",
+    "mindsToExport": "Fikrlar",
+    "audioFilesToExport": "Audio fayllar",
+    "mindsExported": "Fikrlar eksport qilindi",
+    "audioFilesExported": "Audio fayllar eksport qilindi",
+    "mindsImported": "Fikrlar import qilindi",
+    "audioFilesImported": "Audio fayllar import qilindi"
 }
